--- a/views/login.erb
+++ b/views/login.erb
@@ -41,11 +41,6 @@
             <label for="pwd">Password:</label>
             <input type="password" name="password" class="form-control" id="pwd">
           </div>
-     <!--This currently doesn't do anything, so I commented it out
-     <div class="checkbox">
-       <label><input type="checkbox"> Remember me</label>
-     </div>-->
-      <!-- <input type="submit" value="submit"/>-->
           <div class="col-md-4 col-md-offset-4">
             <button type="submit" class="btn btn-default"  margin-top: 20px;
               margin-bottom: 20px;
@@ -56,6 +51,7 @@
     </div>
     <br>
   <div class="row">
+    <%=session[:error]%>
     <div class= "col-md-1 col-md-offset-5">
       <a class="btn btn-primary" href="/registration" role="button">Create Account</a>
     </div>
