--- a/views/home.erb
+++ b/views/home.erb
@@ -7,8 +7,9 @@
     <div class= "col-md-6 col-md-offset-3" >
             <h1>Recent Tweets</h1>
             <br>
+            <%byebug%>
           <% @tweets.each do |tweet| %>
-            <% tweet = JSON.parse(tweet[0]) %>
+            <% tweet = JSON.parse(tweet) %>
               <div class="panel panel-default">
                 <div class="panel panel-heading">
                   <a href = <%="/user/"+ tweet["author_name"]%>><%=tweet["author_name"]%></a> tweeted at <%=tweet["created_at"]%> :
